2005-09-02  Larry Jones  <lawrence.jones@ugs.com>

	* commit.c (checkaddfile): Improve error messages for lock_RCS failure.
	* release.c (release): Improve error message for pclose failure.

	* root.h (struct cvsroot_s): Always declare isremote to simplify
	other code.  Simplify referencing code.
	* root.c (new_cvsroot_t): Always initialize isremote.
	* server.h: Always declare server_active to simplify other code.
	Simplify referencing code.
	* server.c: Always define server_active.

2005-09-02  Larry Jones  <lawrence.jones@ugs.com>

	* parseinfo.c (parse_config): Variable declarations must precede
	executable code for pre-C99 compilers.  Pass correct line number
	variable to expand_path.

2005-09-01  Derek Price  <derek@ximbiot.com>

	* recurse.c: Update bug report email address.

2005-08-31  Derek Price  <derek@ximbiot.com>

	* cvs.h (expand_path): Update proto.
	* expand_path.c (expand_variable): Accept and use cvsroot arg inplace
	of global.
	(expand_path): Accept and pass through cvsroot arg.
	* main.c (main): Prescan args for config path before config options are
	used.  Pass config path on as needed.  Update comment. 
	* modules.c (do_module): Update expand_path call.
	* parseinfo.ci (Parse_Info): Ditto.
	(allowed_config_prefixes): New global.
	(parse_config): Accept configPath arg, update expand_path calls, and
	expand LockDir path.
	* parseinfo.h (parse_config): Update proto.
	* root.c (root_allow_add, get_root_allow_config): Accept new configPath
	arg and pass through to parse_config.
	* root.h (root_allow_add, get_root_allow_config): Update protos.
	* server.c (gConfigPath, server_usage): New globals.
	(parseServerOptions): New function.
	(server): Use new usage var.
	(pserver_authenticate_connection): Update get_root_allow_config call.
	* server.h (parseServerOptions): New proto.
	* wrapper.c (wrap_add): Update expand_path calls.
	* sanity.sh (server): New tests for setting config file path.

2005-08-31  Derek Price  <derek@ximbiot.com>
